--- a/client/src/GridLayout/styles.css
+++ b/client/src/GridLayout/styles.css
@@ -1,3 +1,41 @@
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
+    gap: 10px;
+    width: 100vw;
+    height: 100vh;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0);
+    background-image: radial-gradient(circle, rgba(229,229,229,0.03) 20%, transparent 10%), radial-gradient(circle, rgba(229,229,229,0.03) 20%, transparent 10%);
+}
+
+.item {
+display: flex;
+align-items: center;
+justify-content: center;
+font-size: 1.2rem;
+font-weight: bold;
+text-align: center;
+border-radius: 5px;
+padding: 20px;
+
+}
+
+.salmon { grid-column: span 2; grid-row: span 2; }
+.broccoli { grid-column: span 4; }
+.tamago { grid-column: span 2; }
+.pork { grid-column: span 2; }
+.edamame { grid-column: span 2; }
+.tomato, .tofu { grid-column: span 2; }
+
+
+.grid-child{
+height: 100%;
+width: 100%;
+border-radius: 15px;
+}
+
 .box{
 
     box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
