Add new assets, update styles, and refactor components for improved UI

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,7 +15,7 @@
   -moz-osx-font-smoothing: grayscale;
 
     --dark-black: #1c1c25;
-    --smoke: #c4c4c4;
+    --smoke: #241414;
     --blue: #2a4bb3;
     --medium-black: #25252f;
     --black: #101016;
