--- a/client/src/GridLayout/styles.css
+++ b/client/src/GridLayout/styles.css
@@ -1,13 +1,10 @@
-.grid-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: auto;
-    gap: 10px;
-    width: 100vw;
-    height: 100vh;
-    padding: 10px;
-    background-color: rgba(0, 0, 0, 0);
-    background-image: radial-gradient(circle, rgba(229,229,229,0.03) 20%, transparent 10%), radial-gradient(circle, rgba(229,229,229,0.03) 20%, transparent 10%);
+.bg-image{
+   position: absolute;
+   width: 100%;
+   height: 100%;
+    background-image: url(../assets/bg.jpg);
+    /* filter: blur(15px); */
+    z-index: -1;
 }
 
 .item {
@@ -33,12 +30,12 @@ padding: 20px;
 .grid-child{
 height: 100%;
 width: 100%;
-border-radius: 15px;
+border-radius: 10px;
 }
 
 .box{
 
     box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
-    border-radius: 15px;
+    border-radius: 10px;
     
 }
