--- a/client/src/third-grid/ThirdGrid.css
+++ b/client/src/third-grid/ThirdGrid.css
@@ -22,7 +22,7 @@
 }
 .g3-upper-left-text {
     font-size: 16px;  /* Default font size, can be adjusted */
-    max-width: 20ch;  /* Limits the text width to 20 characters */
+    max-width: 40ch;  /* Limits the text width to 20 characters */
     overflow: hidden;  /* Hides any text that overflows */
     text-overflow: ellipsis;  /* Adds ellipsis (...) for overflowed text */
     white-space: nowrap;  /* Prevents wrapping of text */
@@ -51,14 +51,38 @@
     border-radius: 8px;
     padding: 10px;
 }
+.g3-lower{
+    height: 85%;
+}
 .g3-tv-display{
     width: 100%;
     border-radius: 8px;
-    height: 540px;
-
+    height: 100%;
 }
 .poster{
     width: 100%;
     height: 100% !important;
-    object-fit: fill;
+    object-fit: contain;
+    /* border-radius: 8px; */
+    border: 10px solid var(--dark-yellow);
+    border-top: 0px;
+    border-bottom: 0px;
+    /* animation: borderPulse 200ms infinite alternate; */
+}
+
+
+
+
+@keyframes borderPulse {
+    0%{
+        border-color: var(--dark-yellow);
+    }
+    50%{
+        border-color: rgba(255,215,0,0.5);
+        border-width: 4px;
+    }
+    100%{
+        border-color: var(--dark-yellow);
+        border-width: 2px;
+    }
 }
