--- a/client/src/GridLayout/styles.css
+++ b/client/src/GridLayout/styles.css
@@ -3,8 +3,9 @@
    width: 100%;
    height: 100%;
     background-image: url(../assets/bg.jpg);
-    /* filter: blur(15px); */
-    z-index: -1;
+    filter: blur(15px);
+    opacity: 0.3;
+    z-index: -2;
 }
 
 .item {
