--- a/client/src/GridLayout/styles.css
+++ b/client/src/GridLayout/styles.css
@@ -123,3 +123,9 @@ border-radius: 10px;
         padding: 2rem;
     }
 }
+
+@media (min-resolution: 1.5dppx) {
+    .grid-main{
+        gap: 0.8rem;
+    }
+}
