--- a/client/src/fourth-grid/FourthGrid.css
+++ b/client/src/fourth-grid/FourthGrid.css
@@ -5,7 +5,7 @@
 .g6-main {
   width: 100%;
   height: 100%;
-  padding: 1.5rem;
+  padding: .2rem 1.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
